--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,13 @@
 
     <!-- Material Design Lite js Library -->
     <script type="text/javascript" src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
+    <script>
+      $(".mdl-card__title-text").hover(function(){
+        $(this).css("background-color", "yellow");}, 
+        function(){
+        $(this).css("background-color", "initial");
+      })
+    </script>
     {% if site.pagination_type == 'ops' %}
     <script rel="javascript" src="{{ "/js/site.js" | prepend: site.baseurl }}"></script>
     {% endif %}
