--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,7 @@
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="jquery-1.11.3.min.js"></script>
+
 
 </head>
