--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       }
 
       function normal(x) {
-          x.style.backgroundColor: none
+          x.style.backgroundColor: initial
       }
     </script>
     {% if site.pagination_type == 'ops' %}
